<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>decision_interfaces</name>
  <version>0.0.0</version>
  <description>ROS interface definitions for abstract_decision_components</description>

  <maintainer email="t.k.olson@student.tudelft.nl">Tyler Olson</maintainer>
  <author email="t.k.olson@student.tudelft.nl">Tyler Olson</author>

  <license>Apache-2.0</license>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- <depend>geometry_msgs</depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
